Fix HUD location and size when displaying the FPS meter

The author of https://crrev.com/588577 did not realize the HUD layer
could be used for non-full-viewport rect debug information such as the
FPS meter. This patch restores the non-rect size logic from
https://crrev.com/588577 and adds a test of the FPS meter size.

Bug: 894717
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ied6d6c80e396ab59dbc201994db5214ed1db09a0
Reviewed-on: https://chromium-review.googlesource.com/c/1277658
Reviewed-by: enne <enne@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#599282}
Former-commit-id: 1e1bdbbd406db941c6a0ff4c99271d7d1a9e89f6